--- a/files/style.css
+++ b/files/style.css
@@ -5,6 +5,7 @@ body {
     background: linear-gradient(to bottom, #202020, #111119);
     color: white;
     overflow: hidden;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 html {  height: 100%;}
@@ -56,13 +57,13 @@ html {  height: 100%;}
     transition: .3s all;
 }
 
-#logo {
+#middle {
     text-align: center;
     vertical-align: middle;
-    line-height: 100px;
-    width: 100px;
-    height: 100px;
+    width: 300px;
+    height: 150px;
     border: 1px solid white;
+    background-color: rgba(0, 0, 0, 0.651);
 
 
     transform: translate(-50%, -50%);
@@ -71,11 +72,15 @@ html {  height: 100%;}
     position: absolute;
 }
 
-.E {
-    font-size: 400%;
+.letter {
+    font-size: 80px;
 }
 
-/* Style the video: 100% width and height to cover the entire window */
+marquee {
+    width: 300px;
+}
+
+
 #myVideo {
     position: fixed;
     right: 0;
@@ -88,7 +93,7 @@ html {  height: 100%;}
     z-index: -1;
   }
   
-  /* Add some content at the bottom of the video/page */
+
   .content {
     position: fixed;
     bottom: 0;
