--- a/files/style.css
+++ b/files/style.css
@@ -101,4 +101,5 @@ html {  height: 100%;}
       width: 140px;
       border-left: 1px solid white;
       border-right: 1px solid white;
+      font-size: 15px;
   }
