--- a/files/style.css
+++ b/files/style.css
@@ -1,11 +1,3 @@
-@font-face {
-    font-family: 'MyWebFont';
-    src: url('Positive_System.eot'); /* IE9 Compat Modes */
-    src: url('Positive_System.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('Positive_System.woff') format('woff'), /* Modern Browsers */
-         url('Positive_System.ttf')  format('truetype'), /* Safari, Android, iOS */
-         url('Positive_System.svg#svgFontName') format('svg'); /* Legacy iOS */
-  }
 
 body {
     height: 100%;
@@ -16,6 +8,7 @@ body {
     overflow: hidden;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
+
 
 html {  height: 100%;}
 
@@ -102,9 +95,24 @@ html {  height: 100%;}
       text-align: center;
   }
 
+@font-face {
+    font-family: F1;
+    src: url("Positive\ System.otf") format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: F2;
+    src: url("ka1.ttf") format('truetype');
+    font-weight: bold;
+    font-style: normal;
+}
+
   .letter {
       font-size: 90px;
-      font-family: 'MyWebFont';
+      font-family: F2;
+      line-height: 120px;
   }
 
   marquee {
@@ -113,3 +121,4 @@ html {  height: 100%;}
       border-right: 1px solid white;
       font-size: 15px;
   }
+
