--- a/files/style.css
+++ b/files/style.css
@@ -45,6 +45,7 @@ html {  height: 100%;}
     transform: translate(-50%, -0%);
     top: 0%;
     left: 50%;
+    z-index: 1;
 
     height: 23px;
     width: 100%;
