--- a/files/style.css
+++ b/files/style.css
@@ -43,7 +43,7 @@ html {  height: 100%;}
     background-color: rgb(112, 127, 255);
     position: absolute;
     transform: translate(-50%, -0%);
-    top: 0%;
+    bottom: 0%;
     left: 50%;
     z-index: 1;
 
